<?xml version="1.0"?>
<package format="2">
  <name>motoman_control</name>
  <version>0.1.0</version>
  <description>The motoman_control package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/ntl-ros-pkg/motoman_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>dhand_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>ros_control</exec_depend>
  
</package>
